tests/sumo/errors/routes/last_edge_false__oldstyle_plainemission/errors.sumo
Error: The edge 'xxx' within the route '0' is not known.
 The route can not be build.
Quitting (on error).
